tests/fixtures/errors/e0401_assignment_width.mimz
// expect: E0401
module M {
  in a: bits[4]
  out y: bits[8]
  y = a
}
